subprojects/swen430/src/test/resources/tests/valid/NullEquals_Valid_1.while
int f(int|null x) {
    if (!(x is null)) {
        return ((int) x) + 1;
    }

    return 0;
}

void main() {
    print f(5);
    print f(null);
    print f(1);
}
