subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_4.while
int f(int x) {
    while(y > 0) {
        x = x + 1;
    }
    return x;
}
